Fixed search z-index.

--- a/src/styl/input/search.styl
+++ b/src/styl/input/search.styl
@@ -81,3 +81,4 @@ $search-spacing ?= 7px;
 
         .search-option-box
             opacity: 1;
+            z-index: 1;
